k8s-iac-production/v3/networking.k8s.io.Ingress.superlead.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 128m
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: superlead
  namespace: v3
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: superlead.afilio.com.br
    http:
      paths:
      - backend:
          service:
            name: superlead-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - superlead.afilio.com.br
    secretName: wildcard-v2
